lang/macro/tests/ui/fail/42-invalid-method-return-type-in-interface.rs
use liquid_lang as liquid;

#[liquid::interface(name = auto)]
mod foo {
    extern "liquid" {
        fn bar() -> f32;
    }
}

fn main() {}
